force-app/main/default/objects/ssot__CareSpecialty__dlm/fields/ssot__CareSpecialtyType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareSpecialtyType__c</fullName>
    <label>Care Specialty Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareSpecialtyType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>