force-app/main/default/objects/ssot__CareSpecialty__dlm/fields/ssot__CareSpecialtyUsageType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareSpecialtyUsageType__c</fullName>
    <label>Care Specialty Usage Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareSpecialtyUsageType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>